style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  font-family: 'Inter', sans-serif;
}

/*Pseudo class to set color theme f3e1e4*/
:root {
  --white-color: #fff;
  --dark-color: #000;
  --primary-color: #fff5f6;
  --secondary-color: #f4bbc9;
  --tertiary-color: #bb294e;
  --quartinary-color: #6c0820;

  --font-size-s: 0.9rem;
  --font-size-n: 1rem;
  --font-size-m: 1.12rem;
  --font-size-l: 1.5rem;
  --font-size-xl: 2rem;
  --font-size-xxl: 3rem;

  --border-radius-circle: 50%;
  --border-radius-rectangle: 10px;
  --box-shadow: 0px 0px 20px 0px rgb(0 0 0 / 0.2);

  --site-max-width: 1300px;
}


.new-wrap {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.rectangle-wrap {
  display: flex;
  align-items: center;
  justify-content: center;
  margin-top: 30px;
  gap: 70px;
}


.orange-rec {
  background-color: #ff8a00;
  border-radius: var(--border-radius-circle);
  width: 50px;
  height: 50px;
  opacity: 0.8;
}
.pink-rec {
  background-color: #ffb8c6;
  border-radius: var(--border-radius-circle);
  width: 50px;
  height: 50px;
  opacity: 0.8;
}
.coral-rec {
  background-color: #fe0419;
  border-radius: var(--border-radius-circle);
  width: 50px;
  height: 50px;
  opacity: 0.8;
}

.rec-text {
  display: flex;
  flex-direction: column;
  align-items: center;
}

strong {
  color: var(--tertiary-color);
}
.other-page {
  background-color: var(--white-color);
  min-height: 100vh;
  background-image: url(""), url("");
  background-repeat: no-repeat, no-repeat;
  background-position:
    left bottom,
    right bottom;
  background-attachment: fixed;
}

.home-page {
  background-color: var(--white-color);
  min-height: 100vh;
  background-image: url("");
  background-repeat: no-repeat;
  background-position: left top;
}

/* Navbar styling */

.section-content {
  margin: 30px auto;
  padding: 0 20px;
  max-width: var(--site-max-width);
}

header {
  background-color: var(--white-color);
  width: 100%;
  z-index: 5;
  padding: 10px;
}

header .navbar {
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin-top: 15px;
}

.navbar .nav-logo {
  border-radius: var(--border-radius-circle);
  border-color: var(--dark-color);
  max-width: 150px;
  max-height: 100px;
}

.navbar .nav-logo .logo-text {
  object-fit: cover;
  width: 100%;
  height: 100%;
}

.navbar .nav-menu {
  display: flex;
  gap: 10px;
}

.navbar .nav-menu .nav-link {
  padding: 10px 18px;
  border-radius: var(--border-radius-rectangle);
  font-size: var(--font-size-m);
  background: var(--secondary-color);
  transition: 0.3s ease;
  color: var(--quartinary-color);
  font-weight: bold;
}

.navbar .nav-menu .nav-link:hover {
  color: var(--secondary-color);
  background-color: var(--tertiary-color);
}

a {
  text-decoration: none;
}

ul {
  list-style: none;
}

/* Hero styling first page*/

.hero-section {
  min-height: 100vh;
}

.other-page .hero-section {
  min-height: 100vh;
}

.home-page .hero-section .section-content {
  display: flex;
  gap: 50px;
  align-items: center;
  color: var(--primary-color);
  border-radius: var(--border-radius-rectangle);
  justify-content: space-between;
}

.other-page .hero-section .section-content {
  display: flex;
  align-items: center;
  color: var(--white-color);
  justify-content: space-between;
}

.hero-section .hero-details .title {
  font-size: var(--font-size-xxl);
  color: var(--tertiary-color);
  font-family: "Dancing Script";
  display: flex;
  align-items: center;
  gap: 20px;
  width: 100%;
}

.hero-section .hero-details .title::after {
  content: "";
  flex: 1;
  height: 1px;
  background-color: var(--secondary-color);
}
.hero-section .hero-details .title::before {
  content: "";
  flex: 1;
  height: 1px;
  background-color: var(--secondary-color);
}

.home-page .hero-section .hero-details {
  background-color: var(--primary-color);
  border-radius: 16px;
  box-shadow: var(--box-shadow);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  padding: 20px;
}

.other-page .hero-section .hero-details {
  display: flex;
  flex-direction: column;
  gap: 30px;
}

.other-page .hero-section .hero-details .card-wrap {
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 40px;
  background-color: var(--primary-color);
  border-radius: 16px;
  box-shadow: var(--box-shadow);
  padding: 60px;
}

.hero-section .hero-details .subtitle {
  margin-top: 8px;
  margin-bottom: 8px;
  font-size: var(--font-size-xl);
  color: var(--quartinary-color);
  display: flex;
  align-items: center;
  gap: 10px;
}

.other-page .subtitle::after {
  content: "";
  flex: 1;
  height: 1px;
  background-color: var(--secondary-color);
}

.hero-section .hero-details .description {
  font-size: var(--font-size-m);
  color: var(--dark-color);
  max-width: 100%;
  line-height: 3rem;
  text-align: center;
}
.home-page .hero-section .hero-details .description {
  margin-top: 20px;
  max-width: 80%;
}


.hero-section .hero-details .description-wrapper {
  display: flex;
  justify-content: space-between;
  align-items: center;
  gap: 30px;
}

.hero-section .hero-details .button-wrapper {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 10px;
  margin: 20px 0 ;
}

.hero-section .hero-details .button {
  padding: 10px 30px;
  border-radius: var(--border-radius-rectangle);
  font-size: var(--font-size-m);
  color: var(--dark-color);
  background-color: var(--secondary-color);
  border: 2px solid transparent;
  transition: 0.3s ease;
  color: var(--quartinary-color);
  font-weight: bold;
}

.hero-section .hero-details .button:hover {
  color: var(--primary-color);
  border: 2px solid transparent;
  background-color: var(--secondary-color);
}

.home-page .hero-image-wrapper {
  display: flex;
  align-items: center;
  margin-top: 30px;
  width: 50%;
}

.other-page .hero-image-wrapper .hero-image {
  padding: 0;
  max-width: 500px;
  height: 300px;
  object-fit: cover;
  border-radius: 16px;
  box-shadow: var(--box-shadow);
  background: none;
}

.other-page .hero-image-wrapper {
  display: flex;
  justify-content: center;
  align-items: center;
}

.home-page .hero-image {
  margin-top: 20px;
  max-width: 500px;
  object-fit: cover;
  box-shadow: var(--box-shadow);
}

.google-maps {
  color: var(--tertiary-color);
  font-weight: bold;
  
}

/*Bilder styling */

.image-wrapper {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center top;
  background-color: var(--white-color);
}

img {
  padding: 5px;
  border-radius: var(--border-radius-rectangle);
  max-width: 100%;
}

.image-wrapper img {
  box-shadow: var(--box-shadow);
  padding: 5px;
  max-width: 100%;
}

.image-column {
  display: flex;
  flex-direction: column;
  padding: 5px;
}

/* Responsive styling */

@media screen and (max-width: 1140px) {
  :root {
    --font-size-m: 1rem;
    --font-size-l: 1.3rem;
    --font-size-xl: 1.5rem;
    --font-size-xxl: 1.8rem;
    --site-max-width: 900px;
  }

  body {
    background-image: none;
  }

  .other-page .section-content {
    margin: 0px auto;
  }

  .home-page main {
    margin-top: 30px;
  }

  .navbar .nav-menu {
    display: flex;
    align-items: center;
    flex-direction: column;
    gap: 10px;
  }

  .navbar .nav-menu .nav-link {
    background: none;
  }

  header .navbar {
    flex-direction: column;
    gap: 25px;
  }

  header {
    position: relative;
    height: auto;
  }

  .other-page .hero-section {
    padding-top: 0px;
  }

  .home-page .hero-section .section-content {
    justify-content: initial;
    margin-top: 0px;
  }

  .home-page .hero-image {
    max-width: 300px;
  }

  .hero-section .section-content {
    flex-direction: column;
    align-items: center;
    min-height: auto;
  }

  .hero-section .section-content .hero-details {
    display: flex;
    flex-direction: column;
    align-items: center;
    padding-top: 30px;
    width: 100%;
  }

  .hero-section .hero-details .description {
    line-height: 2rem;
    text-align: center;
    max-width: 100%;
  }

  .hero-section .section-content .hero-details .subtitle {
    text-align: center;
  }

  .other-page .subtitle::before {
    content: "";
    flex: 1;
    height: 1px;
    background-color: var(--secondary-color);
  }

  .other-page .hero-section .hero-details .description-wrapper {
    flex-direction: column;
    gap: 0px;
    align-items: center;
  }

  .other-page .hero-section .hero-details .description {
    padding-left: 0px !important;
  }
  .hero-section .section-content .hero-details .button {
    font-weight: bold;
  }

  .hero-image-wrapper .hero-image {
    margin: 0;
    margin-top: 25px;
    width: 100%;
  }
}

